# Puzzlebot

./: .gitignore  detection_results.txt
.github/workflows/: ros2.yml  yolo_test.yml
basic_comms/: package.xml  setup.py
basic_comms/basic_comms/: centerAruco.py  imageCapture.py  listener.py  mapeo.py  mapeoSim.py  monteCarlo.py  particle_filter.py  perception.py  poseEstimation.py  poseKalman.py  slam_teleop.py  talker.py  waypoints.py
minichallenge1/: package.xml  setup.cfg  setup.py
minichallenge1/minichallenge1/: process.py  signal_generator.py
yolov8_detection/: package.xml  setup.py
yolov8_detection/yolov8_detection/: github_test.py  segmentation_test.py
yolov8_msgs/: CMakeLists.txt  package.xml
yolov8_msgs/msg/: InferenceResult.msg
